--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,50 @@ footer {
     margin-bottom: 10px;
     color: white;
 }
+
+/***** BACKGROUND ANIMATION *****/
+body {
+	width: 100wh;
+	height: 100%;
+	background: linear-gradient(-70deg, #ffffff, #f7cde5, #f1d49c, #93c1a1);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 10s ease infinite;
+	-moz-animation: Gradient 10s ease infinite;
+	animation: Gradient 5s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 20% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
