--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Lobster Two', cursive;
     font-weight: 400;
     color: white;
+    text-align: center;
 }
 
 .card-header {
@@ -21,6 +22,7 @@ body {
 
 .card {
     border: none;
+    margin-bottom: 20px;
 }
 
 img {
@@ -132,6 +134,8 @@ h6 {
     text-align: center;
 }
 
+/***** INTERESTS *****/
+
 /***** FOOTER *****/
 
 footer {
@@ -147,7 +151,7 @@ footer {
 body {
 	width: 100wh;
 	height: 100%;
-	background: linear-gradient(-70deg, #ffffff, #f7cde5, #f1d49c, #93c1a1);
+	background: linear-gradient(-70deg, #ffffff, #f7cde5,rgb(164, 238, 220), #93c1a1);
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 10s ease infinite;
 	-moz-animation: Gradient 10s ease infinite;
