--- a/css/styles.css
+++ b/css/styles.css
@@ -227,3 +227,20 @@ body {
     margin-bottom: 5%;
     width: 70%;
 }
+
+/* SPLASH SCREEN */
+ #splashscreen {
+    background-color: whitesmoke; 
+    height: 100vh;
+ }
+
+ #profileSplash {
+     border:1px solid black;
+     height: 30vh;
+     width:30vh;
+     border-radius: 50%;
+     margin-left: auto;
+     margin-right: auto;
+    margin-top:auto;
+    margin-bottom: auto;
+ }
