make a white box on slash screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -235,12 +235,12 @@ body {
  }
 
  #profileSplash {
-     border:1px solid black;
-     height: 30vh;
-     width:30vh;
-     border-radius: 50%;
-     margin-left: auto;
-     margin-right: auto;
-    margin-top:auto;
-    margin-bottom: auto;
+    border:1px solid black;
+    height: 40vh;
+    width:60vh;
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30vh;
+   
  }
