--- a/css/styles.css
+++ b/css/styles.css
@@ -226,28 +226,13 @@ body {
 
 /* SPLASH SCREEN */
  #splashscreen {
-    /* background-image: url(../img/kash-goudarzi-222032-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover; */
-    background-color: #38021f;
+    background-color: white;
     height: 100vh;
     padding-top: 30vh;
     text-align: center;
  }
 
- /* #profileSplash {
-    border:1px solid black;
-    height: 30vh;
-    width:60vh;
-    margin-left: auto;
-    margin-right: auto;
-    background-color:rgba(216, 209, 209, 0.5);
-    text-align: center;
- } */
-/* 
- #profileSplash:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
- } */
+ 
 
  .splash-row {
      padding-top: 3vh;
@@ -257,28 +242,19 @@ body {
      margin-left: auto;
      margin-right: auto;
  }
-  
-  .ml5 .text-wrapper {
-    position: relative;
-    display: inline-block;
-    padding-top: 0.2em;
-    padding-right: 0.05em;
-    padding-bottom: 0.25em;
-    line-height: 1em;
-  }
-  
-  .ml5 .line {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    transform-origin: 0.5 0;
-  }
-  
-  .letters {
-      color: white;
-  }
+
+
+.title-splash {
+    font-family: 'Bungee Shade', cursive;
+	background-image: url(https://media.giphy.com/media/xT9IgN8YKRhByRBzMI/giphy.gif);
+	background-size: cover;
+	color: transparent;
+	-moz-background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 100px;
+	line-height: 1;
+    margin: 10px 0;
+    letter-spacing: 2px;
+    height: 30vh;
+    
+}
