--- a/css/styles.css
+++ b/css/styles.css
@@ -226,13 +226,11 @@ body {
 
 /* SPLASH SCREEN */
  #splashscreen {
-    background-color: white;
+    background-color: transparent;
     height: 100vh;
     padding-top: 30vh;
     text-align: center;
  }
-
- 
 
  .splash-row {
      padding-top: 3vh;
@@ -246,15 +244,14 @@ body {
 
 .title-splash {
     font-family: 'Bungee Shade', cursive;
-	background-image: url(https://media.giphy.com/media/xT9IgN8YKRhByRBzMI/giphy.gif);
+	background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
 	background-size: cover;
 	color: transparent;
 	-moz-background-clip: text;
 	-webkit-background-clip: text;
 	font-size: 100px;
 	line-height: 1;
-    margin: 10px 0;
+    margin: 0 0;
     letter-spacing: 2px;
     height: 30vh;
-    
 }
