--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
     border: none;
     margin-bottom: 20px;
     background-color: transparent;
+    height: 100vh;
 }
 
 img {
@@ -60,7 +61,7 @@ header{
     margin-top: 30px;
     margin-bottom: 30px;
     padding-bottom: 30px;
-    height: 30vh;
+    height: 5vh;
 }
 
 h1 {
@@ -77,6 +78,9 @@ hr.style {
     width: 50%;
 }
 
+.header-container {
+    height: 100vh;
+}
 /**** ABOUT ME *****/
 
 #profile{
@@ -214,14 +218,14 @@ body {
 
 .carousel-img {
     width: auto;
-    height: 40%;
+    height: 82vh;
     margin-left: auto;
     margin-right: auto;
-    padding: 5%;
+    padding-bottom: 3vh;
 }
 .carousel-container{
-    margin-bottom: 5%;
     width: 70%;
+    margin-bottom: 5vh;
 }
 
 /* SPLASH SCREEN */
