--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,8 @@ li.navbar-li {
 }
 
 .navbar-link {
-    color:#6b053b;
+    /* color:#6b053b; */
+    color:black;
     font-family: 'Bungee Shade', cursive;
     font-size: 30px;
 }
@@ -219,13 +220,24 @@ body {
 
 /* SPLASH SCREEN */
  #splashscreen {
-    background-color: transparent;
+    background-image: url(../img/tran-phu-606928-unsplash.jpg);
+    background-size: cover;
     height: 100vh;
     padding-top: 30vh;
     text-align: center;
  }
-
-
+ #content {
+    opacity: 1.0;
+    position: relative;
+ }
+ #layer {
+    background-color:rgba(209, 150, 181,0.9);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .title-splash {
     font-family: 'Bungee Shade', cursive;
 	background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
@@ -265,6 +277,7 @@ body {
   }
   
   .ml11 .letter {
+      
     display: inline-block;
     line-height: 1em;
   }
