--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
     font-size: 18px;
     background-color: white;
     font-family: 'Muli', sans-serif;
+    margin: 0 auto;
 }
 .card-title {
     font-family: 'Bungee Shade', cursive;
@@ -21,6 +22,7 @@ body {
     margin-bottom: 20px;
     background-color: transparent;
     height: 100vh;
+    margin-top: 25vh;
 }
 
 .card-body {
@@ -30,8 +32,12 @@ body {
 .container-fluid {
     padding-left: 0;
     padding-right: 0;
+    margin-right: 0;
 }
 
+.row {
+    margin-right: 0px;
+}
 /******* HEADER *******/
 
 ul {
@@ -163,7 +169,9 @@ ol span {
 h6 {
     font-size: 18px;
 }
-
+#projects {
+    background-color: white;
+}
 /***** HOBBIES *****/
 .hobbies {
     width: 200px;
@@ -255,7 +263,7 @@ body {
     position: relative;
  }
  #layer {
-    background-color:rgba(209, 150, 181,0.9);
+    background-color:rgba(209, 150, 181,0.7);
     position: absolute;
     top: 0;
     left: 0;
@@ -286,7 +294,6 @@ body {
     position: relative;
     display: inline-block;
     padding-top: 0.1em;
-    /* padding-right: 0.05em; */
     padding-bottom: 0.15em;
   }
   
@@ -307,10 +314,3 @@ body {
   }
 
 
-  .raise:hover,
-  .raise:focus {
-  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-  transform: translateY(-0.25em);
-}
-
-/* FOOTER */
