fix navbar scrolling destination

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ li.navbar-li {
     font-size: 30px;
 }
 #firstNav {
-    padding-top: 18vh;
+    padding-top: 9em;
     width: 100%;
     margin: 0 auto;
     background-color:rgba(209, 150, 181,0);
