use pushstate to change url when scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 /******* BODY **********/
-
+nav a.current {
+    color: red;
+}
 body {
     font-size: 18px;
     background-color: white;
@@ -11,6 +13,7 @@ body {
     font-weight: 400;
     color:#6b053b;
     text-align: center;
+    margin-top: 22vh;
 }
 
 .container {
@@ -22,7 +25,7 @@ body {
     margin-bottom: 20px;
     background-color: transparent;
     height: 100vh;
-    margin-top: 22vh;
+    
 }
 
 .card-body {
@@ -58,7 +61,7 @@ li.navbar-li {
     margin-left: 20px;
 }
 
-#special-li {
+.special-li {
     margin-left: 0px;
 }
 
