--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .row {
-    margin-right: 0px;
+    margin-right: 0;
 }
 hr{
     border: none;
@@ -45,8 +45,8 @@ hr{
 
 ul {
     list-style-type: none;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0;
+    padding-right: 0;
     
 }
 li.navbar-li {
@@ -55,7 +55,7 @@ li.navbar-li {
 }
 
 .special-li {
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 .navbar-link {
@@ -164,7 +164,7 @@ ol span {
 /***** PROJECTS *****/
 
 .title-row {
-    padding: 10px 0px 10px 0px;
+    padding: 10px 0 10px 0;
     border-bottom: 1px solid plum;
 }
 
