--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ ul {
     padding-right: 0;
     
 }
-li.navbar-li {
+.navbar-li {
     display:inline-block;
     margin-left: 20px;
 }
@@ -106,7 +106,7 @@ h1 {
     font-size: 45px;
 }
 
-hr.style {
+.style {
 	border-top: 3px double #8c8b8b;
 }
 #secondLine {
